--- a/hf_deep_dive_seq_clas_with_bert/sequence_classification.ipynb
+++ b/hf_deep_dive_seq_clas_with_bert/sequence_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAjvmCSVT1AMmVnEl2LFhM",
+      "authorship_tag": "ABX9TyOuBQtuvPoS+ELWrY5R/wT1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1737,7 +1737,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/roldanjrgl/huggingface_deep_dive/blob/main/sequence_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/roldanjrgl/posts/blob/main/hf_deep_dive_seq_clas_with_bert/sequence_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1752,12 +1752,13 @@
     {
       "cell_type": "code",
       "source": [
+        "# comment - 03/01/2025\n",
         "import json"
       ],
       "metadata": {
         "id": "8JQbffnekbPY"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1854,7 +1855,7 @@
         "id": "-0hhZKkKROWh",
         "outputId": "cf8419ca-6b4b-48f4-9bdb-8985c8b9374a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1945,7 +1946,7 @@
       "metadata": {
         "id": "CTZ4jTZl66eC"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1961,7 +1962,7 @@
         "id": "T_d1yJB5jfDK",
         "outputId": "74767280-f75a-4fb9-f71c-66c91ba4e397"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1992,7 +1993,7 @@
       "metadata": {
         "id": "RQQj8JFSj_ff"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2007,7 +2008,7 @@
         "id": "uZPJD_zJkIXW",
         "outputId": "c2f00849-e5ee-4031-a8e7-4914188b297a"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2043,7 +2044,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2068,7 +2069,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
